--- a/pom.xml
+++ b/pom.xml
@@ -44,23 +44,23 @@
             <artifactId>JDA</artifactId>
             <version>4.4.1_353</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.jagrosh/jda-utilities-commons -->
         <dependency>
-            <groupId>com.jagrosh</groupId>
-            <artifactId>jda-utilities</artifactId>
-            <version>3.0.5</version>
-            <type>pom</type>
+            <groupId>com.github.Nagami-Yukki</groupId>
+            <artifactId>JDA-Utilities</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <!-- Music Dependencies -->
         <dependency>
             <groupId>dev.arbjerg</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.4</version>
         </dependency>
         <dependency>
             <groupId>dev.lavalink.youtube</groupId>
             <artifactId>common</artifactId>
-            <version>1.5.2</version>
+            <version>1.13.3</version>
         </dependency>
 	<dependency>
 	    <groupId>com.github.jagrosh</groupId>
